<b><u> v2.13, 22.08.2016</b></u>
<font color=#FF8C00>&#9830;</font> Adjustments to the Layouts.
<font color=#FF8C00>&#9830;</font> Update LocPanel, credits Darth Predator.
<font color=#FF8C00>&#9830;</font> Change the changelog to only show if my UI is installed.
<font color=#FF8C00>&#9830;</font> Fix an issue wich prevent to use ClassColorOverride if transparent isn't selected.
<font color=#FF8C00>&#9830;</font> Code cleanup

<b><u> v2.12, 18.08.2016</b></u>
<font color=#FF8C00>&#9830;</font> An extra frame will show up, if the GMOTD gets updated.
<font color=#FF8C00>&#9830;</font> Hopefully fix now the lua error in changelog. X.x
<font color=#FF8C00>&#9830;</font> Removed the skinning of items in the ObjectiveTracker, will be in the next ElvUI version.
<font color=#FF8C00>&#9830;</font> Update the Skada profile in setup.

<b><u> v2.11, 15.08.2016</b></u>
<font color=#FF8C00>&#9830;</font> Fixed the empty space on unitframes after install. Finally, thanks goes to Benik. :)
<font color=#FF8C00>&#9830;</font> "Maybe" fixed a nil error in changelog.
<font color=#FF8C00>&#9830;</font> More work on the ObjectivTracker skin.
<font color=#FF8C00>&#9830;</font> More work on the Quest skin
<font color=#FF8C00>&#9830;</font> Update settings in install.
<font color=#FF8C00>&#9830;</font> If you visit the Auction House, the bags should be open/close automatically.
<font color=#FF8C00>&#9830;</font> Enable tooltip scanning for bags in my install. It cost more resources, so if you experience performance issues turn it off in the Bags settings.
<font color=#FF8C00>&#9830;</font> Adjust the width of the changelog.

<b><u> v2.10, 10.08.2016</b></u>
<font color=#FF8C00>&#9830;</font> Overhaul the install process for AddOns.
<font color=#FF8C00>&#9830;</font> Some tweaks to the Layouts.
<font color=#FF8C00>&#9830;</font> Fix a nil error if BenikUI is not loaded.
<font color=#FF8C00>&#9830;</font> Add hearthstone position to the LocPanel menu.