@@ -1,3 +1,11 @@
+** v2.14, xx.08.2016**
+* Rearrange customTexts in install.
+* Color the my UI name in the TOC file.
+* Add font file to core, it will replace some blizz default fonts.
+* More work on the ObjectiveTracker.
+* Add Tooltips for spells in the LocPanel. And some code adjustments.
+* Enhance the skins options.
+
 ** v2.13, 22.08.2016**
 * Adjustments to the Layouts.
 * Update LocPanel, credits Darth Predator.
