@@ -1,3 +1,11 @@
+<b><u> v2.14, xx.08.2016</b></u>
+<font color=#FF8C00>&#9830;</font> Rearrange customTexts in install.
+<font color=#FF8C00>&#9830;</font> Color the my UI name in the TOC file.
+<font color=#FF8C00>&#9830;</font> Add font file to core, it will replace some blizz default fonts.
+<font color=#FF8C00>&#9830;</font> More work on the ObjectiveTracker.
+<font color=#FF8C00>&#9830;</font> Add Tooltips for spells in the LocPanel. And some code adjustments.
+<font color=#FF8C00>&#9830;</font> Enhance the skins options.
+
 <b><u> v2.13, 22.08.2016</b></u>
 <font color=#FF8C00>&#9830;</font> Adjustments to the Layouts.
 <font color=#FF8C00>&#9830;</font> Update LocPanel, credits Darth Predator.
